# rust-web

async_functions/: Cargo.toml
managing_views/: Cargo.toml
managing_views/src/: main.rs
managing_views/src/views/: mod.rs  path.rs
managing_views/src/views/auth/: login.rs  logout.rs  mod.rs
todo_app/: Cargo.toml  state.json
todo_app/src/: main.rs  processes.rs  state.rs
todo_app/src/to_do/structs/: base.rs  done.rs  pending.rs
todo_app/src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs
web_todo/: Cargo.toml
web_todo/src/: main.rs  processes.rs
web_todo/src/to_do/structs/traits/: edit.rs
web_todo/src/views/: mod.rs
web_todo/src/views/auth/: mod.rs
web_todo/src/views/to_do/: create.rs  mod.rs
