[package]
name = "web_todo"
version = "0.1.0"
authors = ["henry <henry.zhang@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }